--- a/.github/workflows/surge-deploy.yaml
+++ b/.github/workflows/surge-deploy.yaml
@@ -21,4 +21,4 @@ jobs:
       - name: Install Surge
         run: npm install -g surge
       - name: Run surge
-        run: surge ./build quiz-dawoodSadiq.surge.sh --token ${{ secrets.SURGE_TOKEN }}gi
+        run: surge ./build quiz-dawoodSadiq.surge.sh --token ${{ secrets.SURGE_TOKEN }}
